New server module natives, PART #1

--- a/Server/Core/Server.Core.vcxproj
+++ b/Server/Core/Server.Core.vcxproj
@@ -158,6 +158,16 @@
     <ClInclude Include="..\..\Shared\Scripting\CScriptTimerManager.h" />
     <ClInclude Include="..\..\Shared\Scripting\CSquirrel.h" />
     <ClInclude Include="..\..\Shared\Scripting\CSquirrelArguments.h" />
+    <ClInclude Include="ModuleNatives\ActorNatives.h" />
+    <ClInclude Include="ModuleNatives\BlipNatives.h" />
+    <ClInclude Include="ModuleNatives\CheckpointNatives.h" />
+    <ClInclude Include="ModuleNatives\ModuleNatives.h" />
+    <ClInclude Include="ModuleNatives\ObjectNatives.h" />
+    <ClInclude Include="ModuleNatives\PickupNatives.h" />
+    <ClInclude Include="ModuleNatives\PlayerNatives.h" />
+    <ClInclude Include="ModuleNatives\ScriptNatives.h" />
+    <ClInclude Include="ModuleNatives\ServerNatives.h" />
+    <ClInclude Include="ModuleNatives\VehicleNatives.h" />
     <ClInclude Include="Natives\ActorNatives.h" />
     <ClInclude Include="Natives\BlipNatives.h" />
     <ClInclude Include="Natives\CheckpointNatives.h" />
@@ -280,6 +290,15 @@
     <ClCompile Include="..\..\Vendor\Squirrel\sqstdsystem.cpp" />
     <ClCompile Include="..\..\Vendor\Squirrel\sqtable.cpp" />
     <ClCompile Include="..\..\Vendor\Squirrel\sqvm.cpp" />
+    <ClCompile Include="ModuleNatives\ActorModuleNatives.cpp" />
+    <ClCompile Include="ModuleNatives\BlipModuleNatives.cpp" />
+    <ClCompile Include="ModuleNatives\CheckpointModuleNatives.cpp" />
+    <ClCompile Include="ModuleNatives\ObjectModuleNatives.cpp" />
+    <ClCompile Include="ModuleNatives\PickupModuleNatives.cpp" />
+    <ClCompile Include="ModuleNatives\PlayerModuleNatives.cpp" />
+    <ClCompile Include="ModuleNatives\ScriptModuleNatives.cpp" />
+    <ClCompile Include="ModuleNatives\ServerModuleNatives.cpp" />
+    <ClCompile Include="ModuleNatives\VehicleModuleNatives.cpp" />
     <ClCompile Include="Natives\ActorNatives.cpp" />
     <ClCompile Include="Natives\BlipNatives.cpp" />
     <ClCompile Include="Natives\CheckpointNatives.cpp" />
