--- a/Binary/sdk/ivmp_extif/ivmp_extif.vcxproj.filters
+++ b/Binary/sdk/ivmp_extif/ivmp_extif.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="..\..\..\Shared\Network\CBitStream.h">
       <Filter>Shared</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\Shared\CString.h">
+      <Filter>Shared</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="SDK">
