--- a/Server/Core/Server.Core.vcxproj
+++ b/Server/Core/Server.Core.vcxproj
@@ -159,11 +159,15 @@
     <ClInclude Include="..\..\Shared\Scripting\CSquirrel.h" />
     <ClInclude Include="..\..\Shared\Scripting\CSquirrelArguments.h" />
     <ClInclude Include="ModuleNatives\ActorNatives.h" />
+    <ClInclude Include="ModuleNatives\AreaNatives.h" />
     <ClInclude Include="ModuleNatives\BlipNatives.h" />
     <ClInclude Include="ModuleNatives\CheckpointNatives.h" />
+    <ClInclude Include="ModuleNatives\HashNatives.h" />
     <ClInclude Include="ModuleNatives\Interface\IActorNatives.h" />
+    <ClInclude Include="ModuleNatives\Interface\IAreaNatives.h" />
     <ClInclude Include="ModuleNatives\Interface\IBlipNatives.h" />
     <ClInclude Include="ModuleNatives\Interface\ICheckpointNatives.h" />
+    <ClInclude Include="ModuleNatives\Interface\IHashNatives.h" />
     <ClInclude Include="ModuleNatives\Interface\IModuleNatives.h" />
     <ClInclude Include="ModuleNatives\Interface\IObjectNatives.h" />
     <ClInclude Include="ModuleNatives\Interface\IPickupNatives.h" />
@@ -171,6 +175,7 @@
     <ClInclude Include="ModuleNatives\Interface\IScriptNatives.h" />
     <ClInclude Include="ModuleNatives\Interface\IServerNatives.h" />
     <ClInclude Include="ModuleNatives\Interface\IVehicleNatives.h" />
+    <ClInclude Include="ModuleNatives\Interface\IWorldNatives.h" />
     <ClInclude Include="ModuleNatives\ModuleNatives.h" />
     <ClInclude Include="ModuleNatives\ObjectNatives.h" />
     <ClInclude Include="ModuleNatives\PickupNatives.h" />
@@ -178,6 +183,7 @@
     <ClInclude Include="ModuleNatives\ScriptNatives.h" />
     <ClInclude Include="ModuleNatives\ServerNatives.h" />
     <ClInclude Include="ModuleNatives\VehicleNatives.h" />
+    <ClInclude Include="ModuleNatives\WorldNatives.h" />
     <ClInclude Include="Natives\ActorNatives.h" />
     <ClInclude Include="Natives\BlipNatives.h" />
     <ClInclude Include="Natives\CheckpointNatives.h" />
@@ -301,14 +307,17 @@
     <ClCompile Include="..\..\Vendor\Squirrel\sqtable.cpp" />
     <ClCompile Include="..\..\Vendor\Squirrel\sqvm.cpp" />
     <ClCompile Include="ModuleNatives\ActorModuleNatives.cpp" />
+    <ClCompile Include="ModuleNatives\AreaModuleNatives.cpp" />
     <ClCompile Include="ModuleNatives\BlipModuleNatives.cpp" />
     <ClCompile Include="ModuleNatives\CheckpointModuleNatives.cpp" />
+    <ClCompile Include="ModuleNatives\HashModuleNatives.cpp" />
     <ClCompile Include="ModuleNatives\ObjectModuleNatives.cpp" />
     <ClCompile Include="ModuleNatives\PickupModuleNatives.cpp" />
     <ClCompile Include="ModuleNatives\PlayerModuleNatives.cpp" />
     <ClCompile Include="ModuleNatives\ScriptModuleNatives.cpp" />
     <ClCompile Include="ModuleNatives\ServerModuleNatives.cpp" />
     <ClCompile Include="ModuleNatives\VehicleModuleNatives.cpp" />
+    <ClCompile Include="ModuleNatives\WorldModuleNatives.cpp" />
     <ClCompile Include="Natives\ActorNatives.cpp" />
     <ClCompile Include="Natives\BlipNatives.cpp" />
     <ClCompile Include="Natives\CheckpointNatives.cpp" />
