Committed patch from FRi. Changelog:
-Added new loadingscreen(when the game loads...)
-Added new main menu([DEACTIVATED]New way how the game starts/connect)
-Added admin require to the client launcher
-Added new nametags(like SAMP, but better :P)
-Added toggle for nametags(in the config, false for normal GTA IV network, true for IV:MP GUI)
-Added Chatlog.txt to the IV:MP main folder
-Changed infomessage color and network strings
-Improved Aim/Weapon Sync and fixed death task/animation after death respawn
-Added FireManager (for create/delete fire) and added Explosions
-Added new World2ScreenFunction
-Added vehicle damage sync(now only the health, not the visible damage)
-Added new audioclient for stream music from a file (clientfiles/resources/ or from a url http://idk.com/this.fm)
-[DEACTIVATED | MUST BE REWRITTEN]Added new random peds&vehicles manager(up to 2000 people)
-Blocked Key H, now you can't turn on the headlights until we've synced it
-Added new animation system to players and actors
-Added new object stuff to attach objects to vehicles and players
-Added new vehicle sync stuff(engine,health,windows,door states, lights etc)
-Added new ivmp command /dvi (/disablevehicleinfo) for enable/disable vehicle info
-Increased player/object/vehicle stream distance to 300f
-Fixed horn and slowdown bug(caused by controlstates.. & improved controlstates)
-Added prevention that lights don't turn on automatically(Doesn't work at random vehicles)
-Fixed SetInterior for vehicle(a lot of crashs were caused by them(example booth tunnel))
-Added new natives to Scripting.h + added vehicle windows/tyres enums
-Increased Max players up to 48
-Added new look(happines island)
-Added new categories, so the player can control now which font GUI uses(for instance)
-New server events(playerShot,vehicleDamage,vehicleDeath,vehicleRespawn(maybe more?))
-Fixed some crashs caused by natives or invalid handlers
-Fixed GUI Bug(Minimize Game -> Reopen it -> Crash or GUI is bugged)
-Fixed SetR

--- a/Client/Core/Client.Core.vcxproj
+++ b/Client/Core/Client.Core.vcxproj
@@ -54,7 +54,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\Shared;.\CEGUI\cegui\include;..\..\Vendor\zlib-1.2.5;..\..\Vendor\DXSDK\include;..\..\Vendor;..\..\Vendor\Squirrel;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\Shared;.\CEGUI\cegui\include;..\..\Vendor\zlib-1.2.5;..\..\Vendor\DXSDK\include;..\..\Vendor\bass; ..\..\Vendor;..\..\Vendor\Squirrel;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;CLIENT_EXPORTS;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_NO_DEPRECATE;CEGUI_STATIC;LOGGER;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -67,9 +67,9 @@
     </ClCompile>
     <Link>
       <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>winmm.lib;d3dx9.lib;ws2_32.lib;comctl32.lib;dinput8.lib;dxguid.lib;libexpat_d.lib;pcre_d.lib;SILLY_d.lib;freetype_d.lib;libjpeg_d.lib;libpng_d.lib;zlib_d.lib;CEGUIBase_d.lib;CEGUIDirect3D9Renderer_d.lib;CEGUIExpatParser_d.lib;CEGUIFalagardWRBase_d.lib;CEGUISILLYImageCodec_d.lib;version.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>winmm.lib;d3dx9.lib;ws2_32.lib;comctl32.lib;dinput8.lib;dxguid.lib;libexpat_d.lib;pcre_d.lib;SILLY_d.lib;freetype_d.lib;libjpeg_d.lib;libpng_d.lib;zlib_d.lib;CEGUIBase_d.lib;CEGUIDirect3D9Renderer_d.lib;CEGUIExpatParser_d.lib;CEGUIFalagardWRBase_d.lib;CEGUISILLYImageCodec_d.lib;version.lib;bass.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)\$(TargetName).dll</OutputFile>
-      <AdditionalLibraryDirectories>.\CEGUI\lib\;..\..\Vendor\lib\static;..\..\Vendor\expat-2.0.1\bin\Debug;..\..\Vendor\lpng142\projects\Debug;..\..\Vendor\zlib-1.2.5\projects\Debug;..\..\Vendor\jpeg-6b\projects\Debug;..\..\Vendor\SILLY-0.1.0\bin;..\..\Vendor\DXSDK\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>.\CEGUI\lib\;..\..\Vendor\lib\static;..\..\Vendor\expat-2.0.1\bin\Debug;..\..\Vendor\bass;..\..\Vendor\lpng142\projects\Debug;..\..\Vendor\zlib-1.2.5\projects\Debug;..\..\Vendor\jpeg-6b\projects\Debug;..\..\Vendor\SILLY-0.1.0\bin;..\..\Vendor\DXSDK\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <IgnoreAllDefaultLibraries>
       </IgnoreAllDefaultLibraries>
       <IgnoreSpecificDefaultLibraries>
@@ -100,12 +100,13 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <CompileAs>Default</CompileAs>
       <DisableSpecificWarnings>4996;4409;%(DisableSpecificWarnings)</DisableSpecificWarnings>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>winmm.lib;d3dx9.lib;ws2_32.lib;comctl32.lib;dinput8.lib;dxguid.lib;libexpat.lib;pcre.lib;SILLY.lib;freetype.lib;libjpeg.lib;libpng.lib;zlib.lib;CEGUIBase.lib;CEGUIDirect3D9Renderer.lib;CEGUIExpatParser.lib;CEGUIFalagardWRBase.lib;CEGUISILLYImageCodec.lib;version.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>winmm.lib;d3dx9.lib;ws2_32.lib;comctl32.lib;dinput8.lib;dxguid.lib;libexpat.lib;pcre.lib;SILLY.lib;freetype.lib;libjpeg.lib;libpng.lib;zlib.lib;CEGUIBase.lib;CEGUIDirect3D9Renderer.lib;CEGUIExpatParser.lib;CEGUIFalagardWRBase.lib;CEGUISILLYImageCodec.lib;version.lib;bass.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)\$(TargetName).dll</OutputFile>
-      <AdditionalLibraryDirectories>.\CEGUI\lib\;..\..\Vendor\lib\static;..\..\Vendor\expat-2.0.1\bin\Release;..\..\Vendor\lpng142\projects\Release;..\..\Vendor\zlib-1.2.5\projects\Release;..\..\Vendor\jpeg-6b\projects\Release;..\..\Vendor\SILLY-0.1.0\bin;..\..\Vendor\DXSDK\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>.\CEGUI\lib\;..\..\Vendor\lib\static;..\..\Vendor\expat-2.0.1\bin\Release;..\..\Vendor\lpng142\projects\Release;..\..\Vendor\zlib-1.2.5\projects\Release;..\..\Vendor\jpeg-6b\projects\Release;..\..\Vendor\SILLY-0.1.0\bin;..\..\Vendor\DXSDK\Lib;..\..\Vendor\bass\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
       <ModuleDefinitionFile>
       </ModuleDefinitionFile>
@@ -184,7 +185,9 @@
     <ClInclude Include="..\..\Shared\Game\CControlState.h" />
     <ClInclude Include="..\..\Shared\Game\CTime.h" />
     <ClInclude Include="..\..\Shared\Game\CTrafficLights.h" />
+    <ClInclude Include="CAudio.h" />
     <ClInclude Include="CActorManager.h" />
+	<ClInclude Include="CFireManager.h" />
     <ClInclude Include="CBlipManager.h" />
     <ClInclude Include="CCheckpoint.h" />
     <ClInclude Include="CCheckpointManager.h" />
@@ -234,6 +237,7 @@
     <ClInclude Include="Natives.h" />
     <ClInclude Include="Natives\PlayerNatives.h" />
     <ClInclude Include="Natives\VehicleNatives.h" />
+    <ClInclude Include="Natives\AudioNatives.h" />
     <ClInclude Include="..\..\Shared\Scripting\Natives\AreaNatives.h" />
     <ClInclude Include="..\..\Shared\Scripting\Natives\EventNatives.h" />
     <ClInclude Include="..\..\Shared\Scripting\Natives\HashNatives.h" />
@@ -352,7 +356,9 @@
     <ClCompile Include="..\..\Shared\Game\CControlState.cpp" />
     <ClCompile Include="..\..\Shared\Game\CTime.cpp" />
     <ClCompile Include="..\..\Shared\Game\CTrafficLights.cpp" />
+    <ClCompile Include="CAudio.cpp" />
     <ClCompile Include="CActorManager.cpp" />
+	<ClCompile Include="CFireManager.cpp" />
     <ClCompile Include="CBlipManager.cpp" />
     <ClCompile Include="CCheckpoint.cpp" />
     <ClCompile Include="CCheckpointManager.cpp" />
@@ -409,6 +415,7 @@
     <ClCompile Include="Natives\GUINatives.cpp" />
     <ClCompile Include="Natives\PlayerNatives.cpp" />
     <ClCompile Include="Natives\VehicleNatives.cpp" />
+    <ClCompile Include="Natives\AudioNatives.cpp" />
     <ClCompile Include="..\..\Shared\Scripting\Natives\AreaNatives.cpp" />
     <ClCompile Include="..\..\Shared\Scripting\Natives\EventNatives.cpp" />
     <ClCompile Include="..\..\Shared\Scripting\Natives\HashNatives.cpp" />
