Fixed small mistake in ivmp_extif makefile.

--- a/Binary/sdk/ivmp_extif/makefile
+++ b/Binary/sdk/ivmp_extif/makefile
@@ -3,7 +3,7 @@ CFLAGS=-c -Wall -D_LINUX -w -ISDK/ -I. -I../../../Shared -I../../../Server/Core 
 SOURCES=$(wildcard *.cpp)
 SOURCES+=$(wildcard SDK/*.cpp) $(wildcard ../../../Vendor/Squirrel/*.cpp)
 OBJECTS=$(SOURCES:.cpp=.o)
-EXECUTABLE=ivmp_helloworld.so
+EXECUTABLE=ivmp_extif.so
 
 all: $(SOURCES) $(EXECUTABLE)
 
