Let the linux nightly use our private net module.

--- a/Network/Core/makefile
+++ b/Network/Core/makefile
@@ -1,5 +1,5 @@
 CC=g++
-CFLAGS=-c -w -D_SERVER -D_LINUX -I../../Shared -I. -I../../Shared/Network
+CFLAGS=-c -g -w -D_SERVER -D_LINUX -I../../Shared -I. -I../../Shared/Network
 
 SOURCES=$(wildcard *.cpp)
 SOURCES+=../../Shared/SharedUtility.cpp ../../Shared/CString.cpp ../../Shared/Network/CBitStream.cpp ../../Shared/Game/CControlState.cpp ../../Shared/Linux.cpp
