-Added new stuff into cp.nut -Fixed asm code from togglebliproute -Changed/Improved anim requestsystem(lower memory usage, etc) -Fixed fire-desynchronize after respawn(death) -Added new stuff for loading screen(testing code) -Moved animgroups to separate file -Reversed BurstCarTyre(vehicle) -Fixed check if vehicle is in water(z coords etc) -Fixed vehicle floating bug(in the air), hopefully^^ -Fixed warnings(squirrel warnings and emptyvehiclesync) -Added native getActorCoordinates(need to move it to another file)(please take a look at the wiki(client side)) -Added native togglePlayerBlipDisplayForPlayer, togglePlayerBlipShortRangeForPlayer(server side) -Decreased distance between health and amour bar(guinametags)

--- a/Client/Core/Client.Core.vcxproj.filters
+++ b/Client/Core/Client.Core.vcxproj.filters
@@ -714,6 +714,9 @@
     <ClInclude Include="CFireManager.h">
       <Filter>Header Files\Network</Filter>
     </ClInclude>
+    <ClInclude Include="AnimGroups.h">
+      <Filter>Header Files\Game\Scripting</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Commands.cpp">
