--- a/Client/Core/Client.Core.vcxproj
+++ b/Client/Core/Client.Core.vcxproj
@@ -122,6 +122,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AimSync.h" />
+    <ClInclude Include="AnimGroups.h" />
     <ClInclude Include="CD3D9Webkit.hpp" />
     <ClInclude Include="CDebugView.h" />
     <ClInclude Include="Commands.h" />
