-Fixed #871(" /driveautomatic in a vehicle without driver = instant server shutdown ") -Readded/Fixed Webkit(NOTE: it's still WORK IN PROGRESS and has some bugs(e.g. input etc.) which will be resolved in the next commits)

--- a/Client/Core/Client.Core.vcxproj
+++ b/Client/Core/Client.Core.vcxproj
@@ -122,8 +122,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AimSync.h" />
-    <ClInclude Include="AnimGroups.h" />
     <ClInclude Include="CD3D9Webkit.hpp" />
+    <ClInclude Include="AnimGroups.h" />
     <ClInclude Include="CDebugView.h" />
     <ClInclude Include="Commands.h" />
     <ClInclude Include="Input.h" />
@@ -302,6 +302,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AimSync.cpp" />
+    <ClCompile Include="CD3D9Webkit.cpp" />
     <ClCompile Include="CDebugView.cpp" />
     <ClCompile Include="Commands.cpp" />
     <ClCompile Include="Input.cpp" />
