--- a/Client/Core/Client.Core.vcxproj.filters
+++ b/Client/Core/Client.Core.vcxproj.filters
@@ -1160,5 +1160,8 @@
     <ClCompile Include="CScreenShot.cpp">
       <Filter>Source Files\Graphics</Filter>
     </ClCompile>
+    <ClCompile Include="CD3D9Webkit.cpp">
+      <Filter>Source Files\Graphics</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
