-Changed IV:MP logo color from orange to green(need to finish the network background..) -Fixed triggerPlayerGameSound native -Added (gtaiv)scripts to game initialize -Added new stuff to CGame(world/train initialize stuff) -Fixed warning in CIVVehicle -Added Train stuff(CIVTrain,IVTrain,Test code to input.cpp)
NOTE: This version IS NOT RECOMMENDET for playing IV:MP(random peds, some crashes due development etc.)

--- a/Client/Core/Client.Core.vcxproj
+++ b/Client/Core/Client.Core.vcxproj
@@ -125,6 +125,7 @@
     <ClInclude Include="CD3D9Webkit.hpp" />
     <ClInclude Include="AnimGroups.h" />
     <ClInclude Include="CDebugView.h" />
+    <ClInclude Include="CIVTrain.h" />
     <ClInclude Include="Commands.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="CChatWindow.h" />
@@ -303,6 +304,7 @@
   <ItemGroup>
     <ClCompile Include="AimSync.cpp" />
     <ClCompile Include="CDebugView.cpp" />
+    <ClCompile Include="CIVTrain.cpp" />
     <ClCompile Include="Commands.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Main.cpp" />
